--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
 </head>
 <body>
     
-    <!-- Обертка для симуляции мобильного экрана -->
     <div id="game-container">
-        <!-- Холст -->
+        <!-- [ИЗМЕНЕНИЕ 13] Кнопка быстрого рестарта -->
+        <button id="topRestartBtn" aria-label="Restart">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M23 4v6h-6"></path>
+                <path d="M1 20v-6h6"></path>
+                <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
+            </svg>
+        </button>
+
         <canvas id="gameCanvas"></canvas>
 
-        <!-- Интерфейс -->
         <div id="ui-container">
             <div id="score">0</div>
         </div>
 
-        <!-- Экран проигрыша -->
         <div id="gameOverScreen" class="hidden">
             <div class="modal">
                 <h1>Game Over</h1>
