--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div id="game-container">
-        <!-- [ИЗМЕНЕНИЕ 13] Кнопка быстрого рестарта -->
+        <!-- Кнопка рестарта -->
         <button id="topRestartBtn" aria-label="Restart">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M23 4v6h-6"></path>
@@ -25,9 +25,22 @@
             <div id="score">0</div>
         </div>
 
+        <!-- Экран "Второй шанс" (НОВЫЙ) -->
+        <div id="secondChanceScreen" class="hidden">
+            <div class="modal">
+                <h2>Продолжить?</h2>
+                <div id="secondChanceTimer">5</div>
+                <button id="adButton">
+                    <span>📺</span> Второй шанс
+                </button>
+                <p class="subtext">Один раз за игру</p>
+            </div>
+        </div>
+
+        <!-- Экран "Проигрыш" -->
         <div id="gameOverScreen" class="hidden">
             <div class="modal">
-                <h1>Game Over</h1>
+                <h1>ПРОИГРЫШ</h1>
                 <div id="finalScore"></div>
                 <button id="restartButton">Играть снова</button>
             </div>
