--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
             <div id="score">0</div>
         </div>
 
-        <!-- Экран "Второй шанс" (НОВЫЙ) -->
+        <!-- Экран "Второй шанс" -->
         <div id="secondChanceScreen" class="hidden">
             <div class="modal">
+                <!-- [ИЗМЕНЕНИЕ] Кнопка закрытия -->
+                <button id="closeSecondChance">&times;</button>
+                
                 <h2>Продолжить?</h2>
                 <div id="secondChanceTimer">5</div>
                 <button id="adButton">
