--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
     
     <div id="game-container">
-        <!-- Кнопка рестарта -->
+        <!-- [ИЗМЕНЕНИЕ] Контейнер рекорда -->
+        <div id="high-score-container">
+            <svg class="trophy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"/>
+                <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"/>
+                <path d="M4 22h16"/>
+                <path d="M10 14.66V22"/>
+                <path d="M14 14.66V22"/>
+                <path d="M17.73 4H6.27a2 2 0 0 0-2 2.54v3.31a2 2 0 0 0 2 2.54h11.46a2 2 0 0 0 2-2.54V6.54a2 2 0 0 0-2-2.54z"/>
+            </svg>
+            <span id="high-score-value">0</span>
+        </div>
+
         <button id="topRestartBtn" aria-label="Restart">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M23 4v6h-6"></path>
@@ -28,9 +40,7 @@
         <!-- Экран "Второй шанс" -->
         <div id="secondChanceScreen" class="hidden">
             <div class="modal">
-                <!-- [ИЗМЕНЕНИЕ] Кнопка закрытия -->
                 <button id="closeSecondChance">&times;</button>
-                
                 <h2>Продолжить?</h2>
                 <div id="secondChanceTimer">5</div>
                 <button id="adButton">
