--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div id="game-container">
-        <!-- [ИЗМЕНЕНИЕ] Контейнер рекорда -->
+        <!-- Контейнер рекорда -->
         <div id="high-score-container">
             <svg class="trophy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"/>
@@ -60,6 +60,7 @@
         </div>
     </div>
 
-    <script src="game.js"></script>
+    <!-- [ВАЖНО] Подключение модуля -->
+    <script type="module" src="main.js"></script>
 </body>
 </html>
