--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                 </label>
             </div>
 
+            <div class="setting-row">
+                <span>Звук</span>
+                <label class="switch">
+                    <input type="checkbox" id="soundToggle">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+
             <button id="settingsBackBtn" class="btn-secondary">Назад</button>
         </div>
 
