--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
             </div>
         </div>
     </div>
-
+    <!-- YANDEX GAMES SDK (ДОБАВЬ ЭТУ СТРОКУ) -->
+    <script src="https://yandex.ru/games/sdk/v2"></script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
